完成_接口_登录和发送验证码
2021年6月1日10:54:51

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,8 +77,8 @@ spring.freemarker.suffix=.ftl
 
 #邮件发送配置
 spring.mail.host=smtp.163.com
-spring.mail.username=tsmengban@163.com
-spring.mail.password=PWKBRTROZGHNJYSS
+spring.mail.username=a421028879@163.com
+spring.mail.password=YCYGSBSPLJIPRZVZ
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
