--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,13 @@
             <version>5.6.6</version>
         </dependency>
 
+
+        <!--spring boot集成quartz-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
