--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,13 @@
             <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>io.github.yedaxia</groupId>
+            <artifactId>japidocs</artifactId>
+            <version>1.4.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
